--- a/src/main/resources/templates/admin/carrier/list.html
+++ b/src/main/resources/templates/admin/carrier/list.html
@@ -40,7 +40,10 @@
                         <td th:text="${carrier.status}"></td>
                         <td>
                             <a th:href="@{/admin/carrier/edit/{id}(id=${carrier.id})}" class="btn btn-warning btn-sm">Sửa</a>
-                            <a th:href="@{/admin/carrier/delete/{id}(id=${carrier.id})}" class="btn btn-danger btn-sm">Xóa</a>
+                            <a th:href="@{/admin/carrier/delete/{id}(id=${carrier.id})}" 
+							   class="btn btn-danger btn-sm" 
+							   onclick="return confirm('Bạn có chắc chắn muốn xóa không?')">Xóa</a>
+
                         </td>
                     </tr>
                 </tbody>
