add home, shop page , product detail

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,7 +17,7 @@
                     <!-- Navbar Menu -->
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="shop.html" class="nav-link">Sản phẩm</a>
+                            <a href="/shop" class="nav-link">Sản phẩm</a>
                         </li>
                         <li class="nav-item">
                             <a href="register.html" class="nav-link">Đăng ký</a>
