--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,45 +2,38 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
-                    <h5>About</h5>
-                    <p>Nisi esse dolor irure dolor eiusmod ex deserunt proident cillum eu qui enim occaecat sunt aliqua anim eiusmod qui ut voluptate.</p>
+                <div class="col-md-4">
+                    <img class="mb-3" src="/assets/img/logo/logo.png" width="200px"/>
                 </div>
-                <div class="col-md-3">
-                    <h5>Links</h5>
+                <div class="col-md-4">
+                    <h5>Thông tin</h5>
                     <ul>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="">Về chúng tôi</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact Us</a>
+                            <a href="">FAQ</a>
                         </li>
                         <li>
-                            <a href="faq.html">FAQ</a>
+                            <a href="">Điều khoản</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">How it Works</a>
-                        </li>
-                        <li>
-                            <a href="terms.html">Terms</a>
-                        </li>
-                        <li>
-                            <a href="privacy.html">Privacy Policy</a>
+                            <a href="">Chính sách bảo mật</a>
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-3">
-                     <h5>Contact</h5>
+                <div class="col-md-4">
+                     <h5>Liên hệ</h5>
                      <ul>
                          <li>
-                            <a href="tel:+620892738334"><i class="fa fa-phone"></i> 08272367238</a>
+                            <a href="tel:+840897236723"><i class="fa fa-phone"></i> 0897236723</a>
                         </li>
                         <li>
-                            <a href="mailto:hello@domain.com"><i class="fa fa-envelope"></i> hello@domain.com</a>
+                            <a href="mailto:timesrecords@gmail.com"><i class="fa fa-envelope"></i> timesrecords@gmail.com</a>
                          </li>
                      </ul>
 
-                     <h5>Follow Us</h5>
+                     <h5>Theo dõi chúng tôi</h5>
                      <ul class="social">
                          <li>
                             <a href="javascript:void(0)" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -50,19 +43,6 @@
                          </li>
                          <li>
                             <a href="javascript:void(0)" target="_blank"><i class="fab fa-youtube"></i></a>
-                         </li>
-                     </ul>
-                </div>
-                <div class="col-md-3">
-                     <h5>Get Our App</h5>
-                     <ul class="mb-0">
-                         <li class="download-app">
-                             <a href="#"><img src="assets/img/playstore.png"></a>
-                         </li>
-                         <li style="height: 200px">
-                             <div class="mockup">
-                                 <img src="assets/img/mockup.png">
-                             </div>
                          </li>
                      </ul>
                 </div>
