--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,13 +17,13 @@
                     <!-- Navbar Menu -->
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="shop.html" class="nav-link">Sản phẩm</a>
+                            <a href="/shop" class="nav-link">Sản phẩm</a>
                         </li>
                         <li class="nav-item">
-                            <a href="register.html" class="nav-link">Đăng ký</a>
+                            <a href="/register" class="nav-link">Đăng ký</a>
                         </li>
                         <li class="nav-item">
-                            <a href="login.html" class="nav-link active">Đăng nhập</a>
+                            <a href="/login" class="nav-link">Đăng nhập</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
