--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -31,7 +31,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             	<a class="dropdown-item" href="/account/profile">Tài khoản của tôi</a>
-                                <a class="dropdown-item" href="transaction.html">Đơn hàng</a>
+                                <a class="dropdown-item" href="/order">Đơn hàng</a>
                                 <a class="dropdown-item" href="setting.html">Đăng xuất</a>
                             </div>
                           </li>
