--- a/src/main/resources/templates/admin/user/list.html
+++ b/src/main/resources/templates/admin/user/list.html
@@ -24,11 +24,11 @@
         <thead>
             <tr>
                 <th>STT</th>
-                <th>Avatar</th>
-                <th>Full Name</th>
+                <th>Ảnh đại diện</th>
+                <th>Họ và tên</th>
                 <th>Email</th>
-                <th>Role</th>
-                <th>Actions</th>
+                <th>Vai trò</th>
+                <th>Hành động</th>
                 
             </tr>
         </thead>
@@ -36,7 +36,7 @@
             <tr th:each="user, iterStat : ${users.content}">
                 <td th:text="${(users.number * users.size) + iterStat.index + 1}"></td>
                 <td>
-                    <img th:src="@{/assets/img/avatar/{filename}(filename=${user.avatar})}" alt="Avatar" style="width: 100px; height: 100px;" />
+                    <img th:src="@{/uploads/{filename}(filename=${user.avatar})}" alt="Avatar" style="width: 100px; height: 100px;" />
                 </td>
                 <td th:text="${user.fullName}"></td>
                 <td th:text="${user.email}"></td>
