sign up, sign in, update header

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,6 +21,8 @@
 <link rel="stylesheet" type="text/css" media="all" th:href="@{/assets/packages/bootstrap-touchspin/bootstrap-touchspin.css}">
 <link rel="stylesheet" type="text/css" media="all" th:href="@{/assets/css/theme.css}">
 
+<!-- Icon -->
+<link rel="icon" href="/assets/img/logo/logo.ico" type="image/x-icon"/>
 
 <!-- JavaScript Files -->
 <script type="text/javascript" th:src="@{/assets/js/jquery.js}"></script>
