--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,42 +19,46 @@
                         <li class="nav-item">
                             <a href="/shop" class="nav-link">Sản phẩm</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" sec:authorize="isAnonymous()">
                             <a href="/register" class="nav-link">Đăng ký</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" sec:authorize="isAnonymous()">
                             <a href="/login" class="nav-link">Đăng nhập</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
                             <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <div class="avatar-header"><img src="/assets/img/logo/avatar.jpg"></div> John Doe
+                                <div class="avatar-header"><img src="/assets/img/logo/avatar.jpg"></div> <span sec:authentication="name"></span>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             	<a class="dropdown-item" href="/account/profile">Tài khoản của tôi</a>
-                                <a class="dropdown-item" href="transaction.html">Đơn hàng</a>
-                                <a class="dropdown-item" href="setting.html">Đăng xuất</a>
+                                <a class="dropdown-item" href="/order">Đơn hàng</a>
+                                <a sec:authorize="hasRole('admin')" class="dropdown-item" href="/admin/dashboard">Bảng điều khiển</a>
+                                <a class="dropdown-item" href="/logout">Đăng xuất</a>
                             </div>
                           </li>
                         <li class="nav-item dropdown">
                             <a href="javascript:void(0)" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fa fa-shopping-basket"></i> <span class="badge badge-primary">5</span>
+                                <i class="fa fa-shopping-basket"></i> <span class="badge badge-primary" th:text="${cartItemCount}"></span>
                             </a>
                             <div class="dropdown-menu shopping-cart">
-                                <ul>
+                            	<ul sec:authorize="isAnonymous()" class="text-center p-3">
+                            	    <i class="fa fa-shopping-cart fa-2x text-primary m-3"></i>
+                            	    <p>Đăng nhập để xem giỏ hàng</p>
+                            	</ul>
+                                <ul sec:authorize="isAuthenticated()">
                                     <li>
                                         <div class="drop-title">Giỏ hàng</div>
                                     </li>
                                     <li>
                                         <div class="shopping-cart-list">
-                                            <div class="media">
-                                                <img class="d-flex mr-3" src="/assets/img/logo/avatar.jpg" width="60">
+                                            <div class="media" th:each="cartItem, stat : ${cartItems}">
+                                                <img class="d-flex mr-3" src="@{cartItem.product.cover}" width="60">
                                                 <div class="media-body">
-                                                    <h5><a href="javascript:void(0)">Carrot</a></h5>
+                                                    <h5><a th:href="@{/product/{id}(id=${cartItem.product.id})}" th:text="${cartItem.product.name}">Carrot</a></h5>
                                                     <p class="price">
-                                                        <span class="discount text-muted">Rp. 700.000</span>
-                                                        <span>Rp. 100.000</span>
+                                                        <span th:text="${#numbers.formatDecimal(cartItem.productsSku.price, 0, 'COMMA', 0, 'POINT')} + '₫'"></span>
                                                     </p>
-                                                    <p class="text-muted">Qty: 1</p>
+                                                    <p class="text-muted" th:text="'Số lượng: ' + ${cartItem.quantity}"></p>
                                                 </div>
                                             </div>
                                         </div>
@@ -62,7 +66,7 @@
                                     <li>
                                         <div class="drop-title d-flex justify-content-between">
                                             <span>Tổng:</span>
-                                            <span class="text-primary"><strong>Rp. 2000.000</strong></span>
+                                            <span class="text-primary"><strong th:text="${#numbers.formatDecimal(cart.total, 0, 'COMMA', 0, 'POINT')} + '₫'"></strong></span>
                                         </div>
                                     </li>
                                     <li class="d-flex justify-content-between pl-3 pr-3 pt-3">
