--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,15 +14,15 @@
 
                     <div class="card card-login mb-5">
                         <div class="card-body">
-                            <form class="form-horizontal" action="index.html">
+                            <form class="form-horizontal" action="/login" method="post">
                                 <div class="form-group row mt-3">
                                     <div class="col-md-12">
-                                        <input class="form-control" type="text" required="" placeholder="Tên đăng nhập">
+                                        <input class="form-control" type="text" required="" placeholder="Tên đăng nhập" id="username" name="username">
                                     </div>
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-md-12">
-                                        <input class="form-control" type="password" required="" placeholder="Mật khẩu">
+                                        <input class="form-control" type="password" required="" placeholder="Mật khẩu" id="password" name="password">
                                     </div>
                                 </div>
 <!-- 								<div class="form-group row"> -->
