--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -11,7 +11,7 @@
     <div class="row">
         <!-- Hình ảnh sản phẩm -->
         <div class="col-md-6">
-            <div class="border rounded p-2">
+            <div class="border rounded p-2 text-center">
                 <img th:src="@{/assets/img/products/{file}(file=${product.cover})}" class="img-fluid" alt="Product Image">
             </div>
         </div>
