--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,49 +13,51 @@
 
 					<div class="card card-login mb-5">
 						<div class="card-body">
-							<form class="form-horizontal" action="index.html">
+							<form class="form-horizontal" action="/register/submit"
+								method="post">
+								<div th:if="${message != null}" th:text="${message}" class="alert alert-secondary" role="alert" ></div>
 								<div class="form-group row mt-3">
 									<div class="col-md-12">
 										<input class="form-control" type="text" required=""
-											placeholder="Tên">
+											placeholder="Tên" name="fullName">
 									</div>
 								</div>
 								<div class="form-group row mt-3">
 									<div class="col-md-12">
 										<input class="form-control" type="email" required=""
-											placeholder="Email">
+											placeholder="Email" name="email">
 									</div>
 								</div>
 								<div class="form-group row mt-3">
 									<div class="col-md-12">
 										<input class="form-control" type="phone" required=""
-											placeholder="Số điện thoại">
+											placeholder="Số điện thoại" name="phoneNumber">
 									</div>
 								</div>
 								<div class="form-group row mt-3">
 									<div class="col-md-12">
 										<input class="form-control" type="text" required=""
-											placeholder="Tên đăng nhập">
+											placeholder="Tên đăng nhập" name="username">
 									</div>
 								</div>
 								<div class="form-group row">
 									<div class="col-md-12">
 										<input class="form-control" type="password" required=""
-											placeholder="Mật khẩu">
+											placeholder="Mật khẩu" name="password">
 									</div>
 								</div>
 								<div class="form-group row">
 									<div class="col-md-12">
 										<input class="form-control" type="password" required=""
-											placeholder="Xác nhận mật khẩu">
+											placeholder="Xác nhận mật khẩu" name="confirmPassword">
 									</div>
 								</div>
 								<div class="form-group row">
 									<div class="col-md-12">
 										<div class="checkbox">
 											<input id="checkbox0" type="checkbox" name="terms"> <label
-												for="checkbox0" class="mb-0">I Agree with <a
-												href="terms.html" class="text-light">Terms & Conditions</a>
+												for="checkbox0" class="mb-0">Tôi đồng ý với <a
+												href="" class="text-light">Điều khoản và Chính sách</a>
 											</label>
 										</div>
 									</div>
@@ -63,7 +65,8 @@
 								<div class="form-group row text-center mt-4">
 									<div class="col-md-12">
 										<button type="submit"
-											class="btn btn-primary btn-block text-uppercase">Đăng ký</button>
+											class="btn btn-primary btn-block text-uppercase">Đăng
+											ký</button>
 									</div>
 								</div>
 							</form>
