--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,7 +24,7 @@
 
 <body layout:fragment="content">
 <div class="container">
-    <img src="/assets/img/home.png" alt="home-pic" class="img-fluid mb-4" style="width: 100%; max-width: 1200px;">
+    <img src="/uploads/home.png" alt="home-pic" class="img-fluid mb-4" style="width: 100%; max-width: 1200px;">
     <h2 class="text-primary text-center">CÁC SẢN PHẨM ĐANG Ở TRÊN SÀN</h2>
 
     <div class="container mt-5">
