--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -36,7 +36,7 @@
                 <div class="card text-white bg-warning mb-3">
                     <div class="card-header">Số Lượng Đơn Hàng</div>
                     <div class="card-body">
-                        <h5 class="card-title" th:text="${totalOrders}">0</h5>
+                        <h5 class="card-title" th:text="${totalOrder}">0</h5>
                         <p class="card-text">Tổng số đơn hàng đã được tạo.</p>
                     </div>
                 </div>
