--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -27,7 +27,7 @@
                         </li>
                         <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
                             <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <div class="avatar-header"><img src="/assets/img/logo/avatar.jpg"></div> <span sec:authentication="name"></span>
+                                <div class="avatar-header"><img th:src="${user != null && user.avatar != null} ? @{/uploads/{filename}(filename=${user.avatar})} : @{/assets/img/logo/avatar.jpg}"></div> <span sec:authentication="name"></span>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             	<a class="dropdown-item" href="/account/profile">Tài khoản của tôi</a>
