--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -27,11 +27,11 @@
             </div>
             <p class="card-text" th:text="${product.description}">Product Description</p>
 
-            <!-- Thêm vào Wishlist -->
-            <form th:action="@{/wishlist}" method="post" class="mb-3">
-                <input type="hidden" name="productId" th:value="${product.id}">
-                <button type="submit" class="btn btn-warning">Add to Wishlist</button>
-            </form>
+<!--             Thêm vào Wishlist -->
+<!--             <form th:action="@{/wishlist}" method="post" class="mb-3"> -->
+<!--                 <input type="hidden" name="productId" th:value="${product.id}"> -->
+<!--                 <button type="submit" class="btn btn-warning">Add to Wishlist</button> -->
+<!--             </form> -->
 
             <!-- Thêm vào Giỏ hàng -->
             <form th:action="@{/cart/add/{productId}(productId=${product.id})}" method="post">
