--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -23,7 +23,7 @@
 
 <body layout:fragment="content">
 <div class="container">
-    <img src="/assets/img/home.png" alt="shop-banner" style="width: 1200px; display: block; margin-bottom: 50px;">
+    <img src="/uploads/home.png" alt="home-pic" class="img-fluid mb-4" style="width: 100%; max-width: 1200px;">
 
     <!-- Top Selling Products -->
     <h3 class="text-center text-primary mb-4">Top 5 Sản Phẩm Bán Chạy</h3>
