--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -13,7 +13,7 @@
         <div class="col-md-6">
 
             <div class="border rounded p-2 text-center">
-                <img th:src="@{/assets/img/products/{file}(file=${product.cover})}" class="img-fluid" alt="Product Image">
+                <img th:src="@{/uploads/{file}(file=${product.cover})}" class="img-fluid" alt="Product Image">
             </div>
         </div>
 
