--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,7 +32,7 @@
             <div class="product-card" th:each="product : ${products}">
                 <div class="card h-100">
                     <!-- Hình ảnh sản phẩm -->
-                    <img th:src="@{/assets/img/products/{file}(file=${product.cover})}"
+                    <img th:src="@{/uploads/{file}(file=${product.cover})}"
                          class="card-img-top" style="height: 200px; object-fit: cover;" alt="Product Image">
                     <!-- Nội dung card -->
                     <div class="card-body d-flex flex-column">
